# nonebot-plugin-voicevox-bridge

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  rename.yml
src/nonebot_plugin_template/: __init__.py
src/nonebot_plugin_voicevox_bridge/: __init__.py  client.py  commands.py  config.py  utils.py
tests/: conftest.py  fake.py  plugin_test.py
